--- a/directory/directory.html
+++ b/directory/directory.html
@@ -51,7 +51,7 @@
 		</div>
 		<div id="collapseTwo" class="panel-collapse collapse">
 			<div class="panel-body">
-				<h4><a href="#" title="" target=" _blank">纯CSS3图片切换</a></h4>
+				<h4><a href="https://olivivian.github.io/Show/backgroundSlider/backgroundSlider.html" title="" target=" _blank">纯CSS3背景图片切换</a></h4>
 			</div>
 		</div>
 	</div>
@@ -66,10 +66,10 @@
 		</div>
 		<div id="collapseThree" class="panel-collapse collapse">
 			<div class="panel-body">
-				<h4><a href="#" title="" target=" _blank">仿天猫前端页面</a></h4>
+				<h4><a href="https://olivivian.github.io/Show/Tmall/index.html" title="" target=" _blank">仿天猫前端页面</a></h4>
 			</div>
 			<div class="panel-body">
-				<h4><a href="#" title="" target=" _blank">图书馆系统前端开发</a></h4>
+				<h4><a href="https://olivivian.github.io/Show/librarySubsystem/index.html" title="" target=" _blank">图书馆系统前端开发</a></h4>
 			</div>
 		</div>
 	</div>
@@ -99,7 +99,7 @@
 		</div>
 		<div id="collapseFive" class="panel-collapse collapse">
 			<div class="panel-body"> 
-				<h4><a href="#" title="" target=" _blank">电子时钟</a></h4>
+				<h4><a href="https://github.com/olivivian/Show/blob/master/%E7%94%B5%E5%AD%90%E6%97%B6%E9%92%9F%E6%95%88%E6%9E%9C/electronicClock.html" title="" target=" _blank">电子时钟</a></h4>
 			</div>
 			<div class="panel-body">
 				<h4><a href="#" title="" target=" _blank">灯泡开关</a></h4>
