--- a/directory/directory.html
+++ b/directory/directory.html
@@ -99,10 +99,10 @@
 		</div>
 		<div id="collapseFive" class="panel-collapse collapse">
 			<div class="panel-body"> 
-				<h4><a href="https://github.com/olivivian/Show/blob/master/%E7%94%B5%E5%AD%90%E6%97%B6%E9%92%9F%E6%95%88%E6%9E%9C/electronicClock.html" title="" target=" _blank">电子时钟</a></h4>
+				<h4><a href="https://olivivian.github.io/Show/electronicClock/electronicClock.html" title="" target=" _blank">电子时钟</a></h4>
 			</div>
 			<div class="panel-body">
-				<h4><a href="#" title="" target=" _blank">灯泡开关</a></h4>
+				<h4><a href="https://olivivian.github.io/Show/theLightBulb/theLightBulb.html" title="" target=" _blank">灯泡开关</a></h4>
 			</div>
 		</div>
 	</div>
