--- a/directory/directory.html
+++ b/directory/directory.html
@@ -33,7 +33,7 @@
 		</div>
 		<div id="collapseOne" class="panel-collapse collapse">
 			<div class="panel-body">
-				<h4><a href="#" title="" target=" _blank">简历地址</a></h4>
+				<h4><a href="https://olivivian.github.io/Show/resume/index.html" title="" target=" _blank">简历地址</a></h4>
 			</div>
 			<!-- <div class="panel-body">
 				<h4><a href="#" title="">示例一</a></h4>
