--- a/directory/directory.html
+++ b/directory/directory.html
@@ -104,6 +104,9 @@
 			<div class="panel-body">
 				<h4><a href="https://olivivian.github.io/Show/theLightBulb/theLightBulb.html" title="" target=" _blank">灯泡开关</a></h4>
 			</div>
+			<div class="panel-body">
+				<h4><a href="https://olivivian.github.io/Show/JQstarsScore/index.html" title="" target=" _blank">评分星星</a></h4>
+			</div>
 		</div>
 	</div>
 </div>
