--- a/resume/index.html
+++ b/resume/index.html
@@ -65,6 +65,16 @@ Cufon.replace('H3', { fontFamily: 'Candy Script' });
                      <div style="display: none;" class="tab" id="tab2">
                                          <h2>Skills</h2>
                     <p>
+                    1、做页面？没问题(关键字：HTML+CSS，PS切图，PSD，Sass)<br>
+                    <a href="">demo1</a>
+                    <a href="">demo2</a>
+                    <a href="">demo3</a>
+                    </p>
+
+
+
+
+                    <p>
                     1、精通HTML+CSS制作页面，熟练使用PS切图，将PSD图构思转化为HTML代码，
 
                     能够使用Sass进行CSS快速开发;</p>
