--- a/resume/index.html
+++ b/resume/index.html
@@ -66,24 +66,29 @@ Cufon.replace('H3', { fontFamily: 'Candy Script' });
                                          <h2>Skills</h2>
                     <p>
                     1、做页面？没问题(关键字：HTML+CSS，PS切图，PSD，Sass)<br>
-                    <a href="">demo1</a>
-                    <a href="">demo2</a>
-                    <a href="">demo3</a>
+                    <a href="https://olivivian.github.io/Show/w_task6/w_task6.html" target=" _blank">demo1</a>
+                    <a href="https://olivivian.github.io/Show/w_task7/w_task7.html" target=" _blank">demo2</a>
+                    <a href="https://olivivian.github.io/Show/Tmall/index.html" target=" _blank">demo3</a>
                     </p>
-
-
-
-
                     <p>
-                    1、精通HTML+CSS制作页面，熟练使用PS切图，将PSD图构思转化为HTML代码，
-
-                    能够使用Sass进行CSS快速开发;</p>
-                    <p>2、熟悉JavaScript，能够使用JQuery框架实现一定的页面行为效果;</p>
-                     <p>3、熟悉标签语义，了解HTML5中对网页标签的语义强化;</p>
-                     <p>4、熟悉CSS3新特性，可以使用CSS3制作动画效果等;</p>
-                     <p>5、了解Bootstrap框架，可以使用其合理布局制作页面;</p>
-                     <p>6、掌握Photoshop、Fireworks、sublime、HBuilder等前端开发工具;</p>
+                    2、写效果，当然会！（关键字：JavaScript，JQuery）<br>
+                    <a href="https://olivivian.github.io/Show/JQstarsScore/index.html" target=" _blank">demo1</a>
+                    <a href="https://olivivian.github.io/Show/electronicClock/electronicClock.html" target=" _blank">demo2</a>
                     </p>
+                    <p>
+                    3、CSS3？No Problem!<br>
+                    <a href="https://olivivian.github.io/Show/backgroundSlider/backgroundSlider.html" target=" _blank">demo1</a>
+                    </p>
+                    <p>
+                    4、Bootstrap框架？OK!<br>
+                    <a href="#">demo1</a>
+                    </p>
+                    <p>
+                    5、还会啥？<br>
+                    Photoshop、Fireworks、sublime精通;<br>
+                    git、Markdown、github熟悉;<br>gulp、webpack、nodejs、react了解;
+                    </p>
+
                      </div>       
                      <div style="display: none;" class="tab" id="tab3">
                                          <h2>Project Experience</h2>
