--- a/resume/index.html
+++ b/resume/index.html
@@ -47,7 +47,7 @@ Cufon.replace('H3', { fontFamily: 'Candy Script' });
                     <h2>Personal information</h2>
                     <p>谢锦燕/Olivia/女</p>
                     <p>学历：本科</p>
-                    <p>求职意向：前端开发>网页设计</p>
+                    <p>求职意向：前端开发>网页重构</p>
                     <p>手机：13452530428，邮箱：frightingtime@163.com，QQ:1924485758</p>
                     <p>博客地址:<a href="http://www.cnblogs.com/shiy/" target=" _blank">http://www.cnblogs.com/shiy/</a></p>
                     <p>作品集:<a href="https://olivivian.github.io/Show/directory/directory.html" target=" _blank">https://olivivian.github.io/Show/directory/directory.html</a></p>
@@ -95,12 +95,12 @@ Cufon.replace('H3', { fontFamily: 'Candy Script' });
                     <p>
                     2017.03-2017.04<br>
                     百度前端技术学院&nbsp;&nbsp;|&nbsp;&nbsp;小薇学院<br>
-                    完成报纸模拟排版，常见技术产品官网页面，个人中心页面等实践任务;
+                    根据PSD完成切图与静态页面的制作，并且根据需要加上页面动态交互效果。
                     </p>
                     <p>
                     2017.06-2017.07<br>
                     模拟项目&nbsp;&nbsp;|&nbsp;&nbsp;图书馆借阅子系统<br>
-                    配合后端，完成前端页面的设计与制作，包括图书馆首页，书籍列表展示页、书籍详细信息页等;
+                    按照项目需求设计出相关页面，配合后端，完成前端页面的制作，包括图书馆首页，书籍列表展示页、书籍详细信息页等;
                     </p>
                     <p>
                      2017.08<br>
