--- a/resume/index.html
+++ b/resume/index.html
@@ -65,18 +65,18 @@ Cufon.replace('H3', { fontFamily: 'Candy Script' });
                      <div style="display: none;" class="tab" id="tab2">
                                          <h2>Skills</h2>
                     <p>
-                    1、做页面？没问题(关键字：HTML+CSS，PS切图，PSD，Sass)<br>
+                    1、做页面？OK！(关键字：HTML+CSS，PS切图，PSD，Sass)<br>
                     <a href="https://olivivian.github.io/Show/w_task6/w_task6.html" target=" _blank">demo1</a>
                     <a href="https://olivivian.github.io/Show/w_task7/w_task7.html" target=" _blank">demo2</a>
                     <a href="https://olivivian.github.io/Show/Tmall/index.html" target=" _blank">demo3</a>
                     </p>
                     <p>
-                    2、写效果，当然会！（关键字：JavaScript，JQuery）<br>
+                    2、写效果？OK！（关键字：JavaScript，JQuery）<br>
                     <a href="https://olivivian.github.io/Show/JQstarsScore/index.html" target=" _blank">demo1</a>
                     <a href="https://olivivian.github.io/Show/electronicClock/electronicClock.html" target=" _blank">demo2</a>
                     </p>
                     <p>
-                    3、CSS3？No Problem!<br>
+                    3、CSS3？OK！<br>
                     <a href="https://olivivian.github.io/Show/backgroundSlider/backgroundSlider.html" target=" _blank">demo1</a>
                     </p>
                     <p>
@@ -84,7 +84,7 @@ Cufon.replace('H3', { fontFamily: 'Candy Script' });
                     <a href="#">demo1</a>
                     </p>
                     <p>
-                    5、还会啥？<br>
+                    5、还有什么技能？<br>
                     Photoshop、Fireworks、sublime精通;<br>
                     git、Markdown、github熟悉;<br>gulp、webpack、nodejs、react了解;
                     </p>
@@ -95,7 +95,7 @@ Cufon.replace('H3', { fontFamily: 'Candy Script' });
                     <p>
                     2017.03-2017.04<br>
                     百度前端技术学院&nbsp;&nbsp;|&nbsp;&nbsp;小薇学院<br>
-                    根据PSD完成切图与静态页面的制作，并且根据需要加上页面动态交互效果。
+                    根据PSD完成切图与静态页面的制作，并且按照需要加上页面动态交互效果。
                     </p>
                     <p>
                     2017.06-2017.07<br>
