--- a/directory/directory.html
+++ b/directory/directory.html
@@ -53,6 +53,9 @@
 			<div class="panel-body">
 				<h4><a href="https://olivivian.github.io/Show/backgroundSlider/backgroundSlider.html" title="" target=" _blank">纯CSS3背景图片切换</a></h4>
 			</div>
+			<div class="panel-body">
+				<h4><a href="https://olivivian.github.io/Show/lolPicSwitch/picSwitch01.html" title="" target=" _blank">JQ图片自动切换</a></h4>
+			</div>
 		</div>
 	</div>
 	<div class="panel ">
