--- a/directory/directory.html
+++ b/directory/directory.html
@@ -72,6 +72,9 @@
 				<h4><a href="https://olivivian.github.io/Show/Tmall/index.html" title="" target=" _blank">仿天猫前端页面</a></h4>
 			</div>
 			<div class="panel-body">
+				<h4><a href="https://olivivian.github.io/Show/WCM/index.html" title="" target=" _blank">Bootstrap框架应用</a></h4>
+			</div>
+			<div class="panel-body">
 				<h4><a href="https://olivivian.github.io/Show/librarySubsystem/index.html" title="" target=" _blank">图书馆系统前端开发</a></h4>
 			</div>
 		</div>
