--- a/resume/index.html
+++ b/resume/index.html
@@ -65,27 +65,28 @@ Cufon.replace('H3', { fontFamily: 'Candy Script' });
                      <div style="display: none;" class="tab" id="tab2">
                                          <h2>Skills</h2>
                     <p>
-                    1、做页面？OK！(关键字：HTML+CSS，PS切图，PSD，Sass)<br>
+                    1、熟练运用切图，将PSD图构思转化为HTML代码，能够使用Sass进行快速开发；(关键字：HTML+CSS，PS切图，PSD，Sass)<br>
                     <a href="https://olivivian.github.io/Show/w_task7/w_task7.html" target=" _blank">demo2</a>
                     <a href="https://olivivian.github.io/Show/Tmall/index.html" target=" _blank">demo3</a>
                     </p>
                     <p>
-                    2、写效果？OK！（关键字：JavaScript，JQuery）<br>
+                    2、熟悉JavaScript，能使用JQuery框架实现一定的页面行为效果；（关键字：JavaScript，JQuery）<br>
                     <a href="https://olivivian.github.io/Show/JQstarsScore/index.html" target=" _blank">demo1</a>
                     <a href="https://olivivian.github.io/Show/lolPicSwitch/picSwitch01.html" target=" _blank">demo2</a>
                     </p>
                     <p>
-                    3、CSS3？OK！<br>
+                    3、了解HTML5与CSS3<br>
                     <a href="https://olivivian.github.io/Show/backgroundSlider/backgroundSlider.html" target=" _blank">demo1</a>
                     </p>
                     <p>
-                    4、Bootstrap框架？OK!<br>
-                    <a href="#">demo1</a>
+                    4、了解Bootstrap框架<br>
+                    <a href="https://olivivian.github.io/Show/WCM/index.html">demo1</a>
                     </p>
                     <p>
                     5、还有什么技能？<br>
                     Photoshop、Fireworks、sublime精通;<br>
-                    git、Markdown、github熟悉;<br>gulp、webpack、nodejs、react了解;
+                    git、Markdown、github熟悉;<br>
+                    AJAX、JSON、nodejs、vue、gulp、webpack、了解;
                     </p>
 
                      </div>       
