--- a/resume/index.html
+++ b/resume/index.html
@@ -65,7 +65,7 @@ Cufon.replace('H3', { fontFamily: 'Candy Script' });
                      <div style="display: none;" class="tab" id="tab2">
                                          <h2>Skills</h2>
                     <p>
-                    1、熟练运用切图，将PSD图构思转化为HTML代码，能够使用Sass进行快速开发；(关键字：HTML+CSS，PS切图，PSD，Sass)<br>
+                    1、熟练运用切图，将PSD图构思转化为HTML代码，能够使用Sass开发；(关键字：HTML+CSS，PS切图，PSD，Sass)<br>
                     <a href="https://olivivian.github.io/Show/w_task7/w_task7.html" target=" _blank">demo2</a>
                     <a href="https://olivivian.github.io/Show/Tmall/index.html" target=" _blank">demo3</a>
                     </p>
@@ -75,42 +75,54 @@ Cufon.replace('H3', { fontFamily: 'Candy Script' });
                     <a href="https://olivivian.github.io/Show/lolPicSwitch/picSwitch01.html" target=" _blank">demo2</a>
                     </p>
                     <p>
-                    3、了解HTML5与CSS3<br>
+                    3、了解HTML5与CSS3，能在开发中合理使用其新特性。<br>
                     <a href="https://olivivian.github.io/Show/backgroundSlider/backgroundSlider.html" target=" _blank">demo1</a>
                     </p>
                     <p>
-                    4、了解Bootstrap框架<br>
+                    4、了解Bootstrap框架布局原理，使用其开发过页面。<br>
                     <a href="https://olivivian.github.io/Show/WCM/index.html">demo1</a>
                     </p>
                     <p>
-                    5、还有什么技能？<br>
+                    5、对后端开发有一定的了解，熟悉后端语言JAVA，会使用数据库SQL Server。
+                    </p>
+                    <p>
+                    6、其它技能？<br>
                     Photoshop、Fireworks、sublime精通;<br>
                     git、Markdown、github熟悉;<br>
-                    AJAX、JSON、nodejs、vue、gulp、webpack、了解;
+                    AJAX、JSON、React、grunt、webpack、了解;
                     </p>
 
                      </div>       
                      <div style="display: none;" class="tab" id="tab3">
                                          <h2>Project Experience</h2>
                     <p>
-                    2017.03-2017.04<br>
-                    百度前端技术学院&nbsp;&nbsp;|&nbsp;&nbsp;小薇学院<br>
-                    根据PSD完成切图与静态页面的制作，并且按照需要加上页面动态交互效果。
-                    </p>
-                    <p>
-                    2017.06-2017.07<br>
-                    模拟项目&nbsp;&nbsp;|&nbsp;&nbsp;图书馆借阅子系统<br>
-                    按照项目需求设计出相关页面，配合后端，完成前端页面的制作，包括图书馆首页，书籍列表展示页、书籍详细信息页等;
+                    2017.08-至今<br/>
+                    前端作品集&nbsp;&nbsp;|&nbsp;&nbsp;个人项目<br/>
+                    项目介绍：根据PSD完成切图与静态页面的制作，并且按照需要加上页面动态交互效果。<br/>
+                    项目地址：https://olivivian.github.io/Show/directory/directory.html
                     </p>
                     <p>
                      2017.08<br>
-                     个人博客搭建<br>   
-                     利用基于Node.js的静态博客框架Hexo结合github搭建个人博客;<br>地址：<a href="https://olivivian.github.io/" target=" _blank">https://olivivian.github.io/</a>;
+                     个人博客搭建&nbsp;&nbsp;|&nbsp;&nbsp;个人项目<br>   
+                     项目介绍：利用基于Node.js的静态博客框架Hexo结合github搭建个人博客;<br>
+                     项目地址：<a href="https://olivivian.github.io/" target=" _blank">https://olivivian.github.io/</a>;
                     </p>
                     <p>
-                    2017.08-至今<br>
-                    个人作品集<br>
-                    地址：<a href="https://olivivian.github.io/Show/directory/directory.html" target=" _blank">https://olivivian.github.io/Show/directory/directory.html</a>
+                    2017.06-2017.07<br/>
+                    图书馆借阅子系统&nbsp;&nbsp;|&nbsp;&nbsp;小组项目<br/>
+
+                    <span class="projectTitle">项目介绍：</span>
+                    <span class="projectContent">使用JavaWeb+SQL完成图书馆书籍查询子系统，实现读者/
+                    图书管理，书籍详情展示，书籍借还等功能。</span>
+                    <span class="projectTitle">项目负责：</span>
+                    <span class="projectContent">按照项目需求设计出相关页面，配合后端，完成前端页面的制作，包括图书馆首页，书籍列表展示页、书籍详细信息页等;</span>
+                    </p>
+                    <p>
+                    2017.01-2017.01<br/>
+                    骰子梭哈小游戏&nbsp;&nbsp;|&nbsp;&nbsp;小组项目<br/>
+                   <span class="projectTitle">项目介绍：</span>
+                   <span class="projectContent">使用Java+Myeclipse完成游戏界面设计、连接服务器、摇骰子，接收发送骰子，判断类型和点数，保存和浏览历史记录等功能。</span>
+                    <span class="projectTitle">项目负责：</span>负责游戏界面设计，摇骰子，判断类型和点数等功能。
                     </p>
                      </div>         
             
